Upgrade to Java 14 and cleanup